<resources>
    <string name="app_name">home</string>

    <!--主页面开始-->
    <string name="main_leftnavigator_header_login">Click to login</string>

    <string name="leftnavigator_menu_home">Home</string>
    <string name="leftnavigator_menu_saved">Saved</string>
    <string name="leftnavigator_menu_settings">Settings</string>
    <string name="leftnavigator_menu_feedback">Feedback</string>

    <string name="toolbar_title_home">Paperboy</string>
    <string name="toolbar_title_saved">Saved</string>

    <string name="toolbar_menu_search">Search</string>
    <string name="toolbar_menu_add">Add</string>

    <string name="toolbar_menu_refresh">Refresh</string>
    <string name="toolbar_menu_marked">Marked as read</string>
    <string name="toolbar_menu_rate">Rate app</string>
    <string name="toolbar_menu_product">Product Tour</string>
    <string name="toolbar_menu_about">About Paperboy</string>
    <string name="toolbar_menu_help">Help</string>

    <string name="toolbar_menu_refresh1">Refresh1</string>

    <string name="toolbar_menu_magazine">Magazine</string>
    <string name="main_menu_cards">Big cards</string>
    <string name="main_menu_compact">Compact</string>
    <string name="main_menu_minimal">Minimal</string>
    <string name="toolbar_menu_picture">Picture</string>

    <string name="toolbar_menu_language">Language</string>
    <string name="toolbar_menu_filter">Filter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="homepage_bottommenu_addpublisher">Add Publisher</string>
    <string name="homepage_bottommenu_addtopic">Add Topic</string>
    <string name="homepage_bottommenu_addfilter">Add Filter</string>

    <string-array name="homepage_tabs_strings">
        <item>Subscribe</item>
        <item>Tag</item>
        <item>Filter</item>
    </string-array>

    <string name="homepage_recyclerviewmenu_rename">Rename</string>
    <string name="homepage_recyclerviewmenu_unsubscribe">Unsubscribe</string>

    <string name="rename_dialog_title">Rename Publisher</string>
    <string name="rename_dialog_positive">RENAME</string>
    <!--主页面结束-->

    <!--发布者列表页面开始-->
    <string name="publisher_title_default">Select Publisher</string>
    <string name="publisher_dialog_title">Select Publisher</string>
    <string name="language_dialog_title">Select Language</string>
    <!--发布者列表页面结束-->

    <!--过滤器列表页面开始-->
    <string name="addfilter_dialog_title">Add a filter</string>
    <string name="addfilter_dialog_positive">ADD</string>
    <!--过滤器列表页面结束-->
</resources>
