<?xml version="1.0" encoding="utf-8"?>
<!--工具栏菜单-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--刷新-->
    <item
        android:id="@+id/save_menu_refresh1"
        android:icon="@drawable/toolbar_menu_refresh"
        android:title="@string/toolbar_menu_refresh1"
        app:showAsAction="always" />
    <!--过滤-->
    <item
        android:icon="@drawable/toolbar_menu_filter"
        android:title="@string/toolbar_menu_add"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/save_menu_cards"
                android:icon="@drawable/main_menu_cards"
                android:title="@string/main_menu_cards" />
            <item
                android:id="@+id/save_menu_compact"
                android:icon="@drawable/main_menu_compact"
                android:title="@string/main_menu_compact" />
            <item
                android:id="@+id/save_menu_minimal"
                android:icon="@drawable/main_menu_minimal"
                android:title="@string/main_menu_minimal" />
        </menu>
    </item>

    <!--其它如：标记和帮助等-->
    <item
        android:id="@+id/save_menu_marked1"
        android:title="@string/toolbar_menu_marked"
        app:showAsAction="never" />

    <item
        android:title="@string/toolbar_menu_help"
        app:showAsAction="never" />
</menu>
